# SolidBackground

./: .gitignore  CMakeLists.txt  README.md
include/: B8vsBiPoAnalysis.hh  EfficiencyAnalysis.hh  HistoAnalysis.hh  Li8visibleEnergyFit.hh  MuonRecoTreeReader.hh  MuonRecoTreeWriter.hh  MuonRoffTreeWriter.hh  MuonToB8Analysis.hh  MuonTools.hh  MuonTrackFinder.hh  MuonVisualization.hh  matlab.hh  muons.hh  nikoStyle.hh  nsEsClusCoins.hh  nsEsClusCoinsRoff.hh
scripts/: B8vsBiPoAnalysis.cc  EfficiencyAnalysis.cc  Li8visibleEnergyFit.cc  MuonToB8Analysis.cc  PetCoins.cc  nikoStyle.cc
src/: HistoAnalysis.cc  MuonRecoTreeReader.cc  MuonRecoTreeWriter.cc  MuonRoffTreeWriter.cc  MuonTools.cc  MuonTrackFinder.cc  MuonVisualization.cc  matlab.cc  muons.cc  nsEsClusCoins.cc  nsEsClusCoinsRoff.cc
